# apollo-rs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  graphql.ungram  rustfmt.toml
crates/apollo-analyzer/: Cargo.toml
crates/apollo-analyzer/src/: database.rs  lib.rs
crates/apollo-analyzer/src/passes/: mod.rs  unused_implements_interfaces.rs  unused_variables.rs
crates/apollo-compiler/: CHANGELOG.md  Cargo.toml  README.md
crates/apollo-compiler/benches/: directives_validation.rs  fields_validation.rs  fragments_validation.rs  multi_source.rs
crates/apollo-compiler/benches/testdata/: simple_query.graphql  simple_schema.graphql  supergraph_query.graphql
crates/apollo-compiler/examples/: async_resolvers.rs  extend_db.rs  extend_db_with_formatter.rs  extend_db_with_linter.rs  extract_directives_used_by_query.rs  file_watcher.rs  hello_world.rs  introspect.rs  modify_query_using_compiler_and_encoder.rs  multi_source_validation.rs  query_with_errors.graphql  rename.rs  timed.rs  validate.rs
crates/apollo-compiler/examples/documents/: get_dog_name.graphql  get_dog_with_fragments.graphql  schema.graphql  schema_extension.graphql
crates/apollo-compiler/src/: arc.rs  built_in_types.graphql  collections.rs  coordinate.rs  diagnostic.rs  diagnostics.rs  hir2.rs  implicit_types.graphql  introspection_tys.graphql  leaking_interner.rs  lib.rs  macros.rs  name.rs  node.rs  node_str.rs  parser.rs  request.rs  response.rs  tests.rs  values.rs
crates/apollo-compiler/src/arbitrary/: arbitrary_executable.rs  common.rs  entropy.rs  mod.rs
crates/apollo-compiler/src/ast/: from_cst.rs  impls.rs  mod.rs  parse.rs  serialize.rs  visitor.rs
crates/apollo-compiler/src/database/: ast.rs  cst.rs  db.rs  def.rs  document.rs  hir.rs  hir_db.rs  inputs.rs  mod.rs  repr.rs  sources.rs
crates/apollo-compiler/src/examples/: hello_world.rs  main.rs
crates/apollo-compiler/src/executable/: filtering.rs  from_ast.rs  mod.rs  serialize.rs  tests.rs  validation.rs
crates/apollo-compiler/src/execution/: engine.rs  input_coercion.rs  introspection.rs  introspection_execute.rs  introspection_max_depth.rs  introspection_split.rs  mod.rs  resolver.rs  response.rs  result_coercion.rs
crates/apollo-compiler/src/hir2/: executable.rs  located.rs  mod.rs  to_mir.rs  type_system.rs
crates/apollo-compiler/src/introspection/: max_depth.rs  mod.rs  resolver.rs  resolvers.rs
crates/apollo-compiler/src/introspection_client/: mod.rs  query.graphql
crates/apollo-compiler/src/passes/: unused_variables.rs
crates/apollo-compiler/src/queries/: database.rs  def_db.rs  document_storage.rs  inputs_storage.rs  mod.rs  parser_db.rs  parser_storage.rs  values.rs
crates/apollo-compiler/src/query_groups/: database.rs  document_db.rs  mod.rs  parser_db.rs
crates/apollo-compiler/src/resolvers/: execution.rs  input_coercion.rs  mod.rs  result_coercion.rs
crates/apollo-compiler/src/schema/: component.rs  from_ast.rs  mod.rs  serialize.rs  tests.rs  validation.rs
crates/apollo-compiler/src/validation/: 0062_root_operation_with_list_type.graphql  argument.rs  arguments.rs  diagnostics.rs  directive.rs  directives.rs  enum_.rs  enums.rs  extension.rs  field.rs  field_def.rs  fragment.rs  input_object.rs  input_objects.rs  interface.rs  interfaces.rs  mod.rs  object.rs  objects.rs  operation.rs  operations.rs  scalar.rs  scalars.rs  schema.rs  selection.rs  selection_set.rs  subscription.rs  union_.rs  unions.rs  unused_variable.rs  unused_variables.rs  (+3 more)
crates/apollo-compiler/tests/: error_formatting.rs  executable.rs  extensions.rs  field_set.rs  field_type.rs  input_coercion.rs  introspection.rs  introspection_max_depth.rs  introspection_split.rs  locations.rs  main.rs  merge_schemas.rs  misc.rs  multibyte_characters.rs  name.rs  node_str.rs  parser.rs  schema.rs  serde.rs  snapshot_tests.rs  tests.rs
crates/apollo-encoder/: CHANGELOG.md  Cargo.toml  README.md
crates/apollo-encoder/src/: argument.rs  directive.rs  directive_def.rs  document.rs  enum_def.rs  enum_value.rs  field.rs  field_value.rs  fragment.rs  from_hir.rs  from_parser.rs  input_field.rs  input_object_def.rs  input_value.rs  interface_def.rs  lib.rs  object_def.rs  operation.rs  scalar_def.rs  schema.rs  schema_def.rs  selection_set.rs  string_value.rs  ty.rs  union_def.rs  value.rs  variable.rs
crates/apollo-introspection/: Cargo.toml
crates/apollo-introspection/src/: execution.rs  input_coercion.rs  lib.rs  resolver.rs  response.rs  result_coercion.rs  schema_introspection.rs
crates/apollo-introspection/tests/: doc_example.rs  snapshots.rs
crates/apollo-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/apollo-parser/benches/: benches.rs  peek_n.rs  query.rs  supergraph.rs
crates/apollo-parser/examples/: annotate_snippet.rs  ariadne.rs  miette.rs  modify_query_using_parser_and_encoder.rs  operation_filtering.rs  schema.graphql  unused_vars.rs
crates/apollo-parser/src/: bowstring.rs  error.rs  lexer.rs  lib.rs  limit.rs  parser.rs  tests.rs  token_kind.rs
crates/apollo-smith/: CHANGELOG.md  Cargo.toml  README.md
crates/apollo-smith/examples/: generate.rs  generate_response.rs  request.graphql  schema.graphql
crates/apollo-smith/src/: argument.rs  description.rs  directive.rs  document.rs  enum_.rs  field.rs  fragment.rs  generators.rs  implements_graph.rs  input_object.rs  input_value.rs  interface.rs  lib.rs  name.rs  object.rs  operation.rs  random.rs  response.rs  scalar.rs  schema.rs  selection_set.rs  snapshot_tests.rs  ty.rs  union.rs  variable.rs
crates/apollo-smith/tests/: input_type_kinds.rs  interface_implementations.rs  type_name_uniqueness.rs  with_document.rs
crates/apollo-wasm/: Cargo.toml  LICENSE_MIT  README.md
crates/apollo-wasm/src/: lib.rs
examples/validation-wasm-demo/: Cargo.toml  README.md  index.html
examples/validation-wasm-demo/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: ast_src.rs  cst_src.rs  main.rs  utils.rs
xtask/src/codegen/: gen_syntax_kinds.rs  gen_syntax_nodes.rs  mod.rs
xtask/src/commands/: mod.rs
(+999 files in other folders)
