[package]
name = "xtask"
version = "0.1.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ungrammar = "1.14.5"
proc-macro2 = "1.0.8"
quote = "1.0.2"
xshell = "0.1"
anyhow = "1"
structopt = { version = "0.3", default-features = false }
