[package]
name = "apollo-analyzer"
version = "0.1.0"
authors = ["Irina Shestak <shestak.irina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
documentation = "https://docs.rs/apollo-analyzer"
description = "Semantic analyzer for apollo-parser's AST."
keywords = ["graphql", "parser", "graphql-tooling", "apollographql"]
categories = [
    "compilers",
    "development-tools",
    "parser-implementations",
    "parsing",
    "web-programming",
]
edition = "2021"

[dependencies]
apollo-parser = { path = "../apollo-parser" }
