[package]
name = "apollo-compiler"
version = "0.11.1"
authors = ["Irina Shestak <shestak.irina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
documentation = "https://docs.rs/apollo-compiler"
description = "A compiler for the GraphQL query language."
keywords = ["graphql", "parser", "graphql-tooling", "apollographql"]
categories = [
  "compilers",
  "development-tools",
  "parser-implementations",
  "parsing",
  "web-programming",
]
edition = "2021"

[dependencies]
apollo-parser = { path = "../apollo-parser", version = "0.6.0" }
ariadne = { version = "0.3.0", features = ["auto-color"] }
indexmap = "2.0.0"
rowan = "0.15.5"
salsa = "0.16.1"
ordered-float = { version = "3.7.0", features = ["std"] }
thiserror = "1.0.31"
triomphe = "0.1.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.4", features = ["serde", "v4", "js"] }

[dev-dependencies]
anyhow = "1.0"
expect-test = "1.4"
miette = "5.0"
notify = "6.0.0"
criterion = "0.5.1"
pretty_assertions = "1.3.0"
serial_test = "2.0.0"

[[bench]]
name = "multi-source"
path = "benches/multi_source.rs"
harness = false
