[package]
name = "apollo-compiler"
version = "1.0.0-beta.9" # When bumping, also update README.md
authors = ["Irina Shestak <shestak.irina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
documentation = "https://docs.rs/apollo-compiler"
description = "A compiler for the GraphQL query language."
keywords = ["graphql", "parser", "graphql-tooling", "apollographql"]
categories = [
  "compilers",
  "development-tools",
  "parser-implementations",
  "parsing",
  "web-programming",
]
edition = "2021"
autotests = false # Most tests/*.rs files are modules of tests/main.rs

[dependencies]
apollo-parser = { path = "../apollo-parser", version = "0.7.4" }
ariadne = { version = "0.3.0", features = ["auto-color"] }
indexmap = "2.0.0"
rowan = "0.15.5"
salsa = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
triomphe = "0.1.9"
# TODO: replace `sptr` with standard library methods when available:
# https://github.com/rust-lang/rust/issues/95228
sptr = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.5", features = ["serde", "v4", "js"] }

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5.1"
expect-test = "1.4"
notify = "6.0.0"
pretty_assertions = "1.3.0"
serde_json = "1.0"
serial_test = "2.0.0"
unindent = "0.2.3"

[[bench]]
name = "multi-source"
path = "benches/multi_source.rs"
harness = false

[[test]]
name = "main"

# These need to run in a process where no other test runs concurrently
[[test]]
name = "snapshot_tests"
