[package]
name = "apollo-encoder"
version = "0.3.4"
authors = [
    "Irina Shestak <shestak.irina@gmail.com>",
    "Benjamin Coenen <benjamin.coenen@apollographql.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
documentation = "https://docs.rs/apollo-encoder"
description = "Library to serialise GraphQL Schemas."
keywords = ["graphql", "schema", "encoder", "serializer", "apollographql"]
categories = [
    "compilers",
    "encoding",
    "parser-implementations",
    "parsing",
    "development-tools",
]
edition = "2021"

[dependencies]
apollo-parser = { path = "../apollo-parser", version = "0.3.1", optional = true }
thiserror = "1.0.37"

[features]
default = ["apollo-parser"]

[dev-dependencies]
pretty_assertions = "0.7.1"
indoc = "1.0.3"
