[package]
name = "apollo-encoder"
version = "0.6.0"
authors = [
    "Irina Shestak <shestak.irina@gmail.com>",
    "Benjamin Coenen <benjamin.coenen@apollographql.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
documentation = "https://docs.rs/apollo-encoder"
description = "Library to serialise GraphQL Schemas."
keywords = ["graphql", "schema", "encoder", "serializer", "apollographql"]
categories = [
    "compilers",
    "encoding",
    "parser-implementations",
    "parsing",
    "development-tools",
]
edition = "2021"

[dependencies]
apollo-parser = { path = "../apollo-parser", version = "0.5.0", optional = true }
apollo-compiler = { path = "../apollo-compiler", version = "0.10.0", optional = true }
thiserror = "1.0.37"

[features]
default = ["apollo-parser", "apollo-compiler"]

[dev-dependencies]
pretty_assertions = "1.3.0"
indoc = "2.0.0"
