[package]
name = "apollo-parser"
version = "0.2.12"
authors = ["Irina Shestak <shestak.irina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
documentation = "https://docs.rs/apollo-parser"
description = "Spec-compliant GraphQL parser."
keywords = ["graphql", "parser", "graphql-tooling", "apollographql"]
categories = [
    "compilers",
    "development-tools",
    "parser-implementations",
    "parsing",
    "web-programming",
]
edition = "2021"

[dependencies]
rowan = "0.15.5"

[dev-dependencies]
miette = { version = "3.2.0", features = ["fancy"] }
thiserror = "1.0.30"
pretty_assertions = "0.7.1"
annotate-snippets = "0.9.1"
expect-test = "1.1"
unindent = "0.1.7"
criterion = "0.3.0"

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false
