[package]
name = "apollo-parser"
version = "0.7.4" # When bumping, also update README.md
authors = ["Irina Shestak <shestak.irina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
documentation = "https://docs.rs/apollo-parser"
description = "Spec-compliant GraphQL parser."
keywords = ["graphql", "parser", "graphql-tooling", "apollographql"]
categories = [
    "compilers",
    "development-tools",
    "parser-implementations",
    "parsing",
    "web-programming",
]
edition = "2021"

[dependencies]
memchr = "2.6.1"
rowan = "0.15.5"
thiserror = "1.0.30"

[dev-dependencies]
ariadne = "0.3.0"
indexmap = "2.0.0"
anyhow = "1.0.66"
pretty_assertions = "1.3.0"
annotate-snippets = "0.9.1"
expect-test = "1.4"
unindent = "0.2.1"
criterion = "0.5.0"

[[bench]]
name = "query"
path = "benches/query.rs"
harness = false

[[bench]]
name = "supergraph"
path = "benches/supergraph.rs"
harness = false
