[package]
name = "apollo-smith"
version = "0.3.1"
edition = "2021"
authors = ["Benjamin Coenen <benjamin.coenen@apollographql.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
description = "A GraphQL test case generator."
keywords = [
    "graphql",
    "fuzzer",
    "graphql-tooling",
    "apollographql",
    "test-case-generator",
]
categories = [
    "compilers",
    "development-tools",
    "parser-implementations",
    "development-tools::testing",
    "web-programming",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-encoder = { path = "../apollo-encoder", version = "0.4.0" }
apollo-parser = { path = "../apollo-parser", version = "0.4.0", optional = true }
arbitrary = { version = "1.0.3", features = ["derive"] }
once_cell = "1.9.0"
thiserror = "1.0.37"

[features]
parser-impl = ["apollo-parser"]
