[package]
name = "apollo-smith"
version = "0.6.0-beta.1" # When bumping, also update README.md
edition = "2021"
authors = ["Benjamin Coenen <benjamin.coenen@apollographql.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/apollo-rs"
description = "A GraphQL test case generator."
keywords = [
    "graphql",
    "fuzzer",
    "graphql-tooling",
    "apollographql",
    "test-case-generator",
]
categories = [
    "compilers",
    "development-tools",
    "parser-implementations",
    "development-tools::testing",
    "web-programming",
]

[dependencies]
apollo-compiler = { path = "../apollo-compiler", version = "=1.0.0-beta.9" }
apollo-parser = { path = "../apollo-parser", version = "0.7.0" }
arbitrary = { version = "1.3.0", features = ["derive"] }
indexmap = "2.0.0"
once_cell = "1.9.0"
thiserror = "1.0.37"

[dev-dependencies]
expect-test = "1.4"
