[package]
name = "apollo-wasm"
version = "0.1.0"
authors = ["avery <avery@apollographql.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
apollo-compiler = { path = "../apollo-compiler" }
wee_alloc = "0.4"
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
tsify = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
